<resources>
    <!-- Application name -->
    <string name="app_name">RDV Manager</string>
    <string name="api_key">A</string>

    <!--******************************************************-->
    <!--               MyAppointment fragment                 -->
    <!--******************************************************-->
    <string name="my_appointments">My Appointments</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="add">Add</string>
    <string name="no_appointments">No appointments</string>

    <!--******************************************************-->
    <!--         Dialogs in  MyAppointment fragment           -->
    <!--******************************************************-->

    <string-array name="options">
        <item>@string/call</item>
        <item>@string/open_in_map</item>
        <item>@string/share</item>
        <item>@string/remove</item>
    </string-array>

    <string name="share">Share</string>
    <string name="call">Call the number</string>
    <string name="open_in_map">Open in maps</string>
    <string name="remove">Remove</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_message">Are you sure you want to delete this item?</string>
    <string name="invalid_number">The phone number is not valid</string>
    <string name="invalid_address">The address is invalid</string>

    <!--******************************************************-->
    <!--                       Navigation Bar                 -->
    <!--******************************************************-->
    <string name="appointments">Appointments</string>
    <string name="preferences">Preferences</string>

    <!--******************************************************-->
    <!--                SetAppointment fragment               -->
    <!--******************************************************-->
    <string name="appointment_information">Appointment information</string>
    <string name="new_appointment">New appointment</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="save">OK</string>
    <string name="cancel">Cancel</string>
    <string name="icon">ic</string>
    <string name="empty_field">Empty field</string>

    <!--******************************************************-->
    <!--  Dialogs in SetAppointment fragment -->
    <!--******************************************************-->
    <string name="modify_title">Modify title</string>
    <string name="modify_phone">Modify phone</string>
    <string name="modify_address">Modify Address</string>
    <string name="modify_contact">Modify Contact</string>
    <string name="appointment">Appointment</string>

    <!--******************************************************-->
    <!--                        Preferences                   -->
    <!--******************************************************-->
    <string name="dark_mode">Dark Mode</string>
    <string name="background_music">Background music</string>
    <string name="notification">Notifications</string>
    <string name="language">Language</string>
    <string-array name="languages">
        <item>FR</item>
        <item>EN</item>
    </string-array>
    <string name="send_notification">Send a notification before each appointment</string>
    <string name="two_hours">2 hours</string>
    <string name="one_day">1 day</string>
    <string name="one_week">1 week</string>
    <string name="before">before</string>
    <string-array name="notifications">
        <item>@string/two_hours</item>
        <item>@string/one_day</item>
        <item>@string/one_week</item>
    </string-array>

    <!--******************************************************-->
    <!--                      Notifications                   -->
    <!--******************************************************-->

    <string name="rappel_appointment_in_time">Rappel: %1$s in %2$s</string>

</resources>