<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners_ripple"
                android:layout_marginHorizontal="@dimen/little_margin"
                android:layout_marginTop="@dimen/little_margin"
                android:layout_marginBottom="@dimen/big_margin"
                tools:ignore="UselessParent">

                <!-- titre -->
                <RelativeLayout
                    android:id="@+id/title_button"
                    style = "@style/SectionStyle">

                    <TextView
                        android:id="@+id/title_label"
                        android:text="@string/title"
                        app:drawableLeftCompat="@drawable/ic_title"
                        style="@style/SectionTitleStyle"/>

                    <TextView
                        android:id="@+id/title"
                        android:layout_below="@id/title_label"
                        style="@style/SectionFilledStyle"/>

                    <ImageView
                        style="@style/ArrowStyle"
                        android:contentDescription="@string/icon"/>

                </RelativeLayout>

                <View style="@style/HorizontalBarTheme"/>

                <!-- date -->
                <RelativeLayout
                    android:id="@+id/date_button"
                    style = "@style/SectionStyle">

                    <TextView
                        android:id="@+id/date_label"
                        android:text="@string/date"
                        app:drawableLeftCompat="@drawable/ic_date"
                        style="@style/SectionTitleStyle"/>

                    <TextView
                        android:id="@+id/date"
                        android:layout_below="@id/date_label"
                        style="@style/SectionFilledStyle"/>

                    <ImageView
                        style="@style/ArrowStyle"
                        android:contentDescription="@string/icon"/>

                </RelativeLayout>

                <View style="@style/HorizontalBarTheme"/>

                <!-- heure -->
                <RelativeLayout
                    android:id="@+id/time_button"
                    style = "@style/SectionStyle">

                    <TextView
                        android:id="@+id/time_label"
                        android:text="@string/time"
                        app:drawableLeftCompat="@drawable/ic_time"
                        style="@style/SectionTitleStyle"/>

                    <TextView
                        android:id="@+id/time"
                        android:layout_below="@id/time_label"
                        style="@style/SectionFilledStyle"/>

                    <ImageView
                        style="@style/ArrowStyle"
                        android:contentDescription="@string/icon"/>

                </RelativeLayout>

                <View style="@style/HorizontalBarTheme"/>

                <!-- addresse -->
                <RelativeLayout
                    android:id="@+id/address_button"
                    style = "@style/SectionStyle">

                    <TextView
                        android:id="@+id/address_label"
                        android:text="@string/address"
                        app:drawableLeftCompat="@drawable/ic_address"
                        style="@style/SectionTitleStyle"/>

                    <TextView
                        android:id="@+id/address"
                        android:layout_below="@id/address_label"
                        style="@style/SectionFilledStyle"/>

                    <ImageView
                        style="@style/ArrowStyle"
                        android:contentDescription="@string/icon"/>

                </RelativeLayout>

                <View style="@style/HorizontalBarTheme"/>

                <!-- contact -->
                <RelativeLayout
                    android:id="@+id/contact_button"
                    style = "@style/SectionStyle">

                    <TextView
                        android:id="@+id/contact_label"
                        android:text="@string/contact"
                        app:drawableLeftCompat="@drawable/ic_contact"
                        style="@style/SectionTitleStyle"/>

                    <TextView
                        android:id="@+id/contact"
                        android:layout_below="@id/contact_label"
                        style="@style/SectionFilledStyle"/>

                    <ImageView
                        style="@style/ArrowStyle"
                        android:contentDescription="@string/icon"/>

                </RelativeLayout>

                <View style="@style/HorizontalBarTheme"/>

                <!-- téléphone -->
                <RelativeLayout
                    android:id="@+id/phone_button"
                    style = "@style/SectionStyle">

                    <TextView
                        android:id="@+id/phone_label"
                        android:text="@string/phone"
                        app:drawableLeftCompat="@drawable/ic_phone"
                        style="@style/SectionTitleStyle"/>

                    <TextView
                        android:id="@+id/phone"
                        android:layout_below="@id/phone_label"
                        style="@style/SectionFilledStyle"/>

                    <ImageView
                        style="@style/ArrowStyle"
                        android:contentDescription="@string/icon"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:layout_marginEnd="@dimen/little_margin"
            android:layout_marginBottom="@dimen/little_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_marginEnd="@dimen/little_margin"
            android:layout_marginBottom="@dimen/little_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:text="@string/save"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>