<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/little_margin"

    android:background="@drawable/rounded_corners_black">

    <!-- Rectangle jaune avec titre centré -->
    <TextView
        android:id="@+id/appointment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:background="@drawable/rounded_corners_top_yellow"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:padding="3dp"/>

    <!-- Rectangle noir-->
    <RelativeLayout
        android:id="@+id/appointment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/round_corners_ripple">

        <!-- Icone more vert  -->
        <ImageView
            android:contentDescription="@string/icon"
            android:id="@+id/more_vert"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_more_vert"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="@dimen/little_margin"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/round_corners_ripple"
            style="@style/IconTheme"/>

        <!-- Icone Date  -->
        <ImageView
            android:contentDescription="@string/icon"
            android:id="@+id/date_ic"
            android:layout_toStartOf="@id/appointment_date"
            android:src="@drawable/ic_date"
            style="@style/IconTheme"/>

        <!-- Texte date -->
        <TextView
            android:id="@+id/appointment_date"
            android:layout_toStartOf="@+id/time_ic"
            android:text="@string/date"
            style="@style/AppointmentContent"/>

        <!-- Icone Time  -->
        <ImageView
            android:contentDescription="@string/icon"
            android:id="@+id/time_ic"
            android:layout_toStartOf="@id/appointment_time"
            android:src="@drawable/ic_time"
            style="@style/IconTheme"/>

        <!-- Texte heure -->
        <TextView
            android:id="@+id/appointment_time"
            android:layout_toStartOf="@id/arrow"
            android:text="@string/time"
            style="@style/AppointmentContent"/>

        <!-- Icone arrow  -->
        <ImageView
            android:id="@+id/arrow"
            android:contentDescription="@string/icon"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_arrow_right"
            style="@style/IconTheme"/>

    </RelativeLayout>

</LinearLayout>